fix: overflow: hidden;のズレを修正

--- a/global.css
+++ b/global.css
@@ -16,6 +16,10 @@ body {
   position: relative;
 }
 
+.canvas-container svg {
+  vertical-align: top;
+}
+
 .canvas-container .overlay {
   position: absolute;
   top: 0;
